<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_overview"
        android:icon="@drawable/icon_group"
        android:orderInCategory="1"
        android:title="@string/actions_overview"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/icon_history"
        android:orderInCategory="2"
        android:title="@string/actions_history"
        app:showAsAction="always"/>

    <item
        android:id="@+id/actions_new_game"
        android:orderInCategory="3"
        android:title="@string/actions_new_game"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actions_log_game"
        android:orderInCategory="4"
        android:title="@string/actions_log_game"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actions_roll_dice"
        android:orderInCategory="5"
        android:title="@string/actions_roll_dice"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actions_random_player"
        android:orderInCategory="6"
        android:title="@string/actions_random_player"
        app:showAsAction="never"/>
</menu>
