<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".activities.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/TextiViewPhase"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/turn_end_phase"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextiViewStep1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/turn_end_step"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/TextiViewStep2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/turn_cleanup_step"
        android:textSize="25sp" />
</LinearLayout>
