<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <Chronometer
            android:id="@+id/chronometerTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Chronometer
            android:id="@+id/chronometerPartial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/LinearLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.07"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewTimerLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="start|center_vertical"
                android:paddingLeft="15dp"
                android:text="00:00" />

            <TextView
                android:id="@+id/textViewTimerRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="end|center_vertical"
                android:paddingRight="15dp"
                android:text="00:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.78"
            android:orientation="horizontal"
            android:weightSum="1">

            <!-- Main content view -->
            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewPhase1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/turn_beginning_phase" />

            <TextView
                android:id="@+id/textViewPhase2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/turn_first_main_phase" />

            <TextView
                android:id="@+id/textViewPhase3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/turn_combat_phase" />

            <TextView
                android:id="@+id/textViewPhase4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/turn_second_main_phase" />

            <TextView
                android:id="@+id/textViewPhase5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/turn_end_phase" />
        </LinearLayout>

    </LinearLayout>

    <!-- Navigation drawer -->
    <LinearLayout
        android:id="@+id/linearLayoutDrawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listViewDrawer1"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

        <View
            android:layout_width="240dp"
            android:layout_height="3dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:alpha="0.2"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:orientation="horizontal"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:paddingRight="?android:attr/listPreferredItemPaddingRight"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/screen_on"
                android:textAppearance="?android:attr/textAppearanceListItemSmall" />

            <CheckBox
                android:id="@+id/checkBoxKeepScreenOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:onClick="onClickKeepScreenOn" />
        </LinearLayout>

        <View
            android:layout_width="240dp"
            android:layout_height="3dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:alpha="0.2"
            android:background="@android:color/darker_gray" />

        <ListView
            android:id="@+id/listViewDrawer2"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    </LinearLayout>

</LinearLayout>
