<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#FF1D1D1D"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:src="@drawable/drawer_banner"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/drawer_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <!-- Content -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray300"/>

        <!-- Item Home -->
        <LinearLayout
            android:id="@+id/drawerItemHome"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickDrawerItem"
            android:orientation="horizontal">

            <!-- Icon -->
            <LinearLayout
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/icon_home"
                    android:tint="@color/secondary_text"/>
            </LinearLayout>

            <!-- Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/drawer_home"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Item Players -->
        <LinearLayout
            android:id="@+id/drawerItemPlayers"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickDrawerItem"
            android:orientation="horizontal">

            <!-- Icon -->
            <LinearLayout
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/drawerItemIconPlayers"
                    android:layout_width="20dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/icon_players"
                    android:tint="@color/secondary_text"/>
            </LinearLayout>

            <!-- Text -->
            <TextView
                android:id="@+id/drawerItemTextPlayers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/drawer_players"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Item Records -->
        <LinearLayout
            android:id="@+id/drawerItemRecords"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickDrawerItem"
            android:orientation="horizontal">

            <!-- Icon -->
            <LinearLayout
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/icon_records"
                    android:tint="@color/secondary_text"/>
            </LinearLayout>

            <!-- Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/drawer_records"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray300"/>

        <!-- Item screen on -->
        <LinearLayout
            android:id="@+id/drawerItemScreen"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickDrawerItem"
            android:orientation="horizontal">

            <!-- Icon -->
            <LinearLayout
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/icon_screen"
                    android:tint="@color/secondary_text"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical">

                <!-- Text -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/switchScreen"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/drawer_screen"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"/>

                <Switch
                    android:id="@id/switchScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray300"/>

        <!-- Item Settings -->
        <LinearLayout
            android:id="@+id/drawerItemSettings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickDrawerItem"
            android:orientation="horizontal">

            <!-- Icon -->
            <LinearLayout
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/icon_settings"
                    android:tint="@color/secondary_text"/>
            </LinearLayout>

            <!-- Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/drawer_settings"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Item About -->
        <LinearLayout
            android:id="@+id/drawerItemAbout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickDrawerItem"
            android:orientation="horizontal">

            <!-- Icon -->
            <LinearLayout
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/icon_about"
                    android:tint="@color/secondary_text"/>
            </LinearLayout>

            <!-- Text -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/drawer_about"
                android:textColor="@color/primary_text"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>